[package]
name = "ofibrs"
version = "0.1.0"
edition = "2021"

[dependencies]
ospf-parser = {path = "ospf-parser"}
nom-derive = "*"
serde = {"version" = "*", features = ["derive"]}
serde_json = { "version" = "*", default-features = false, features = ["alloc"] }

[lib]
crate-type = ["staticlib"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
